# reptile-care

./: CLAUDE.md  DEPLOYMENT.md  PRODUCTION_READY.md  bash.exe.stackdump  reptile_care_sample.db
.claude/: settings.local.json
backend/: .env.example  .gitignore  API_TESTING.md  README.md  UV_GUIDE.md  config.py  database.py  deploy.bat  deploy.sh  main.py  migrate_add_image_url.py  models.py  pyproject.toml  reptile_care.db.bak  start.bat  start.sh  test_system.py
backend/routers/: __init__.py  dev_tools.py  events.py  relays.py  schedules.py  tanks.py  temperature.py
backend/services/: __init__.py  device_control.py  modbus_controller.py  scheduler.py  temperature_monitor.py
design_handoff_reptile_care/: README.md  index.html
design_handoff_reptile_care/src/: atoms.jsx  data-more.jsx  data-settings.jsx  data.jsx  desktop-alerts.jsx  desktop-detail.jsx  desktop-schedule.jsx  desktop-settings.jsx  desktop.jsx  mobile-screens.jsx  mobile-settings.jsx  mobile.jsx  styles.css
docs/: modbus_16channel_contorller.md  system_architecture.md
frontend/: .env.production  DEV_TOOLS_GUIDE.md  PWA_FIX_GUIDE.md  README.md  generate-icons.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/dev-dist/: sw.js
frontend/public/: ICONS_README.md
frontend/src/: App.jsx
frontend/src/components/: Layout.jsx
frontend/src/components/ui/: ArcGauge.jsx  (+11 more)
frontend/src/hooks/: useIsMobile.js
frontend/src/pages/: Alerts.jsx  Dashboard.jsx  DevTools.jsx  ManualControl.jsx  Schedule.jsx  Settings.jsx  TankDetail.jsx  TankManagement.jsx
